# iris-auth

./: .gitignore  README.md  display.py  iris.py  justfile  main.ipynb  main.py  model.py  password_manager.py  preprocess.py  pyproject.toml  sample.py  test_password_manager.py  test_passwords.npz  train.py
app/: app.py
app/static/: script.js
app/templates/: index.html
src/iris_auth/: __init__.py  password_manager.py  pm.py
tests/: test_password_manager.py  test_pm.py
