[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iris-auth"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "Iris-based authentication and password management system"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cryptography>=44.0.3",
    "open-iris>=1.0.0",
    "opencv-python>=4.8.1.78",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
