[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iris-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=44.0.3",
    "numpy>=1.24.4",
    "open-iris>=1.0.0",
    "opencv-python>=4.8.1.78",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]
