[project]
name = "iris-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "appdirs>=1.4.4",
    "cryptography>=44.0.3",
    "numpy>=1.24.4",
    "open-iris>=1.0.0",
    "opencv-python>=4.8.1.78",
]


[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
